software/drivers/USB_DLLs_and_Headers/USB DLLs and Headers/SLABCP2110.vb


    Public Declare Function HidUart_GetNumDevices Lib "SLABHIDtoUART.dll" (ByRef numDevices As UInteger, ByVal vid As UShort, ByVal pid As UShort) As Integer
    Public Declare Function HidUart_GetString Lib "SLABHIDtoUART.dll" (ByVal deviceNum As UInteger, ByVal vid As UShort, ByVal pid As UShort, ByVal deviceString As StringBuilder, ByVal options As UInteger) As Integer
    Public Declare Function HidUart_GetOpenedString Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal deviceString As StringBuilder, ByVal options As UInteger) As Integer
    Public Declare Function HidUart_GetIndexedString Lib "SLABHIDtoUART.dll" (ByVal deviceNum As UInteger, ByVal vid As UShort, ByVal pid As UShort, ByVal stringIndex As UInteger, ByVal deviceString As StringBuilder) As Integer
    Public Declare Function HidUart_GetOpenedIndexedString Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal stringIndex As UInteger, ByVal deviceString As StringBuilder) As Integer
    Public Declare Function HidUart_GetAttributes Lib "SLABHIDtoUART.dll" (ByVal deviceNum As UInteger, ByVal vid As UShort, ByVal pid As UShort, ByRef deviceVid As UShort, ByRef devicePid As UShort, ByRef deviceReleaseNumber As UShort) As Integer
    Public Declare Function HidUart_GetOpenedAttributes Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef deviceVid As UShort, ByRef devicePid As UShort, ByRef deviceReleaseNumber As UShort) As Integer
    Public Declare Function HidUart_Open Lib "SLABHIDtoUART.dll" (ByRef device As IntPtr, ByVal deviceNum As UInteger, ByVal vid As UShort, ByVal pid As UShort) As Integer
    Public Declare Function HidUart_Close Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr) As Integer
    Public Declare Function HidUart_IsOpened Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef opened As Integer) As Integer
    Public Declare Function HidUart_SetUartEnable Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal enable As Integer) As Integer
    Public Declare Function HidUart_GetUartEnable Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef enable As Integer) As Integer
    Public Declare Function HidUart_Read Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal buffer() As Byte, ByVal numBytesToRead As UInteger, ByRef numBytesRead As UInteger) As Integer
    Public Declare Function HidUart_Write Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal buffer() As Byte, ByVal numBytesToWrite As UInteger, ByRef numBytesWritten As UInteger) As Integer
    Public Declare Function HidUart_FlushBuffers Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal flushTransmit As Integer, ByVal flushReceive As Integer) As Integer
    Public Declare Function HidUart_CancelIo Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr) As Integer
    Public Declare Function HidUart_SetTimeouts Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal readTimeout As UInteger, ByVal writeTimeout As UInteger) As Integer
    Public Declare Function HidUart_GetTimeouts Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef readTimeout As UInteger, ByRef writeTimeout As UInteger) As Integer
    Public Declare Function HidUart_GetUartStatus Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef transmitFifoSize As UShort, ByRef receiveFifoSize As UShort, ByRef errorStatus As Byte, ByRef lineBreakStatus As Byte) As Integer
    Public Declare Function HidUart_SetUartConfig Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal baudRate As UInteger, ByVal dataBits As Byte, ByVal parity As Byte, ByVal stopBits As Byte, ByVal flowControl As Byte) As Integer
    Public Declare Function HidUart_GetUartConfig Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef baudRate As UInteger, ByRef dataBits As Byte, ByRef parity As Byte, ByRef stopBits As Byte, ByRef flowControl As Byte) As Integer
    Public Declare Function HidUart_StartBreak Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal duration As Byte) As Integer
    Public Declare Function HidUart_StopBreak Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr) As Integer
    Public Declare Function HidUart_Reset Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr) As Integer
    Public Declare Function HidUart_ReadLatch Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef latchValue As UShort) As Integer
    Public Declare Function HidUart_WriteLatch Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal latchValue As UShort, ByVal latchMask As UShort) As Integer
    Public Declare Function HidUart_GetPartNumber Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef partNumber As Byte, ByRef version As Byte) As Integer
    Public Declare Function HidUart_GetLibraryVersion Lib "SLABHIDtoUART.dll" (ByRef major As Byte, ByRef minor As Byte, ByRef release As Integer) As Integer
    Public Declare Function HidUart_GetHidLibraryVersion Lib "SLABHIDtoUART.dll" (ByRef major As Byte, ByRef minor As Byte, ByRef release As Integer) As Integer
    public declare function HidUart_GetHidGuid lib "SLABHIDtoUART.dll" (ByRef guid as Guid) As Integer
    Public Declare Function HidUart_SetLock Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal lockValue As UShort) As Integer
    Public Declare Function HidUart_GetLock Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef lockValue As UShort) As Integer
    Public Declare Function HidUart_SetUsbConfig Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal vid As UShort, ByVal pid As UShort, ByVal power As Byte, ByVal powerMode As Byte, ByVal releaseVersion As UShort, ByVal flushBuffers As Byte, ByVal mask As Byte) As Integer
    Public Declare Function HidUart_GetUsbConfig Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByRef vid As UShort, ByRef pid As UShort, ByRef power As Byte, ByRef powerMode As Byte, ByRef releaseVersion As UShort, ByRef flushBuffers As Byte) As Integer
    Public Declare Function HidUart_SetManufacturingString Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal manufacturingString() As Byte, ByVal strlen As Byte) As Integer
    Public Declare Function HidUart_GetManufacturingString Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal manufacturingString As StringBuilder, ByRef strlen As Byte) As Integer
    Public Declare Function HidUart_SetProductString Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal productString() As Byte, ByVal strlen As Byte) As Integer
    Public Declare Function HidUart_GetProductString Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal productString As StringBuilder, ByRef strlen As Byte) As Integer
    Public Declare Function HidUart_SetSerialString Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal serialString() As Byte, ByVal strlen As Byte) As Integer
    Public Declare Function HidUart_GetSerialString Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal serialString As StringBuilder, ByRef strlen As Byte) As Integer
    Public Declare Function HidUart_SetPinConfig Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal pinConfig() As Byte, ByVal useSuspendValues As Integer, ByVal suspendValue As UShort, ByVal suspendMode As UShort, ByVal rs485Level As Byte, ByVal clkDiv As Byte) As Integer
    Public Declare Function HidUart_GetPinConfig Lib "SLABHIDtoUART.dll" (ByVal device As IntPtr, ByVal pinConfig() As Byte, ByRef useSuspendValues As Integer, ByRef suspendValue As UShort, ByRef suspendMode As UShort, ByRef rs485Level As Byte, ByRef clkDiv As Byte) As Integer

End Module
